--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* 동그라미 모양의 버튼 스타일 */
+    .circle-button {
+      display: inline-block;
+      padding: 10px 20px;
+      border-radius: 50%;
+      background-color: #3498db; /* 버튼 배경색 지정 */
+      color: #ffffff; /* 텍스트 색상 지정 */
+      text-decoration: none;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
 
+  <!-- 동그라미 모양의 버튼 -->
+  <a href="https://github.com/Kdy010010/Gecom2/new/main" class="circle-button">게시글 만들기</a>
+
+</body>
+</html>
