--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>개컴2</title>
   <style>
     /* 동그라미 모양의 버튼 스타일 */
     .circle-button {
@@ -20,6 +21,7 @@
 
   <!-- 동그라미 모양의 버튼 -->
   <a href="https://github.com/Kdy010010/Gecom2/new/main" class="circle-button">게시글 만들기</a>
-
+  <a href="search.html" class="circle-button">검색</a>
+    <a href="List.html" class="circle-button">리스트</a>
 </body>
 </html>
