--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </style>
 </head>
 <body>
-
+  <img src="https://kdy010010.github.io/Gecom/IMG_2106.png" alt="Logo">
+<br>
   <!-- 동그라미 모양의 버튼 -->
   <a href="https://github.com/Kdy010010/Gecom2/new/main" class="circle-button">게시글 만들기</a>
   <a href="search.html" class="circle-button">검색</a>
