--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
   <a href="https://github.com/Kdy010010/Gecom2/new/main" class="circle-button">게시글 만들기</a>
   <a href="search.html" class="circle-button">검색</a>
     <a href="List.html" class="circle-button">리스트</a>
+  <a href="https://github.com/Kdy010010/Gecom2/issues/1">가입</a>
 </body>
 </html>
